--- a/Modul_1/Python/Modul1_Aufgabe3.ipynb
+++ b/Modul_1/Python/Modul1_Aufgabe3.ipynb
@@ -755,8 +755,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -788,18 +790,19 @@
        "Name: materialtype, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Bestand nach Medienarten\n",
     "checkouts_df[\"materialtype\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -810,18 +813,19 @@
        "Name: usageclass, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Ausleihzahlen nach Medientyp (Digital oder Print)\n",
     "checkouts_df[\"usageclass\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1065,12 +1069,13 @@
        "6515                                        NaN             NaN  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Top 10 Meistausgeliehene Medien\n",
     "checkouts_df.nlargest(10,\"checkouts\")"
    ]
   },
