--- a/Modul_2/2_1_XML.ipynb
+++ b/Modul_2/2_1_XML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<b:Person><b:Last>Zurko</b:Last><b:Middle>Ellen</b:Middle><b:First>Mary</b:First></b:Person></b:NameListtestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>MV</b:Last><b:First>Karthik</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Hussain</b:Last><b:First>Afrin</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Chahal</b:Last><b:Middle>Verma | Purva Choudhary | Dr. Deepak</b:Middle><b:First>Bhavya</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Person><b:Last>Sadeghi</b:Last><b:First>Ahmad-Reza</b:First></b:Person></b:Natestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Sharma</b:Last><b:Middle>Mourya | Prof. Avinash</b:Middle><b:First>Praveen</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "testest\n",
+      "<b:Person><b:Last>Smith</b:Last><b:First>M.</b:First></b:Person></b:NameList></btestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Rai</b:Last><b:Middle>Shubham Rankhambe | Prof. Shambhu</b:Middle><b:First>Mr.</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Denk</b:Last><b:First>Lukas</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Afreen</b:Last><b:Middle>Sana</b:Middle><b:First>Siddiqui</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "</b:NameList></b:Author></b:Author><b:BookTitle>2021 ACM/SPEC International Conference on Performance Engineering (ICPE)</b:BookTitle><b:ConferenceName>2021 ACM/SPEC International Conference on Performance Engineering (ICPE)</b:ConferenceName><b:Month>April</b:Month><b:BIBTEX_Series>ICPE'21</b:BIBTEX_Series><b:BIBTEX_KeyWords>IoT, MQTT, Performance, Pub/Sub, Security, TLS, descartes, sss-group, t_short, myown</b:BIBTEX_KeyWords></b:Source><b:Source><b:SourceType>Report</b:SourceType><b:BIBTEX_Entry>phdthesis</b:BIBTEX_Entry><b:Tag>tuprints4611</b:Tag><b:Title>Security and Privacy Aspects of Mobile Platforms and Applications</b:Title><b:Year>2015</b:Year><b:Author><b:Author><b:NameList><b:Person><b:Last>Dmitrienko</b:Last><b:First>Alexandra</b:First></b:Person></b:NameList></b:Atestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Pawar</b:Last><b:Middle>Vishwanath</b:Middle><b:First>Sayali</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Musa</b:Last><b:Middle>N. O. Sadiku | Sunday S. Adekunte | Sarhan M.</b:Middle><b:First>Matthew</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Person><b:Last>Krupitzer</b:Last><b:First>Christian</b:First></b:Person></b:NameList></b:Autestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Meharanjunisa</b:Last><b:First>Syed</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Person><b:Last>Krupitzer</b:Last><b:First>Christian</b:First></b:Person></b:NameListestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Naik</b:Last><b:First>Shweta</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "testest\n",
+      "testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Sneha</b:Last><b:Middle>Dhanusree | S. Karunya | R.</b:Middle><b:First>K.</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "testest\n",
+      "</b:NameList></b:Author><b:Editor><b:NameList><b:Person><b:Last>Dmitrienko</b:Last><b:First>Alexandra</b:First></b:Person></b:NameList></b:Editortestest\n",
+      "testest\n",
+      "testest\n",
+      "testest\n",
+      "<b:Person><b:Last>Schneider</b:Last><b:First>Thomas</b:First></b:Person></b:NameLitestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Shahane</b:Last><b:Middle>Kumar | Ms. Deepali</b:Middle><b:First>Vikas</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Denk</b:Last><b:First>Lukas</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Laj</b:Last><b:Middle>Sabrin | Ajmal Ali | Sarath Krishnan T | Dr. Noha</b:Middle><b:First>Aleena</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Person><b:Last>Smith</b:Last><b:First>Matthew</b:First></b:Person></b:Ntestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Ali</b:Last><b:Middle>Kumar Kalakar | Hirdesh Chack | Syed Tariq</b:Middle><b:First>Vijay</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Chadak</b:Last><b:Middle>Komalpret Kaur | Rajwinder Kaur | Arpan</b:Middle><b:First>Er.</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Person><b:Last>S.Swamynathan</b:Last></b:Person></b:NameList></b:testest\n",
+      "<b:Person><b:Last>Ford</b:Last><b:First>Richard</b:First></b:Person></b:NameList></testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Ezeozue</b:Last><b:First>Chidozie</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Alotaibi</b:Last><b:Middle>Alazzawi | Jamal</b:Middle><b:First>Lubna</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Gayathri</b:Last><b:Middle>Booma | G.</b:Middle><b:First>V.</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Person><b:Last>Krupitzer</b:Last><b:First>Christian</b:First></b:Person></b:NameList></b:Atestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Selvaprasanth</b:Last><b:Middle>Sathiyanathan | Selvakumar. S | P.</b:Middle><b:First>N.</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "testest\n",
+      "testest\n",
+      "<b:Person><b:Last>Smith</b:Last><b:First>Matthew</b:First></b:Person></b:NameList></b:Atestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Gupta</b:Last><b:Middle>Bhise | Anushri Wali | Payal Pingale | Rohit Gupta | Dr. Brijendra</b:Middle><b:First>Shivmalhar</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "</b:NameList></b:Author></b:Author><b:Pages>95-107</b:Pages><b:Volume>3</b:Volume><b:StandardNumber> ISSN: 0976 - 9811 (Online); 2230 - 7702 (print) DOI: 10.5121/ijwsc.2012.3309</b:StandardNumber><b:JournalName>International Journal on Web Service Computing (IJWSC)</b:JournalName><b:Issue>3</b:Issue><b:Month>September</b:Month><b:URL>http://airccse.org/journal/jwsc/papers/3312ijwsc09.pdf</b:URL><b:BIBTEX_Abstract>The Security Engineering discipline has become more and more important in the recent years. Security requirements engineering is essential to assure the Quality of the resulting software. An increasing part of the communication and sharing of information in our society utilize Web Applications. Last two years have seen a significant surge in the amount of Web Application specific vulnerabilities that are disclosed to the public because of the importance of Security Requirements Engineering for Web based systems and as it is still underestimated. Integration of Web and object technologies offer a foundation for expanding the Web to a new generation of applications. In this paper, we outline our proposed Model- Oriented Security Requirement Engineering (MOSRE) Framework for Web Applications. By applying Object-Oriented technologies and modeling to Security Requirement phase. So the completeness, consistency, traceability and reusability of Security Requirements can be cost effectively improved. We implemented our MOSRE Framework for E-Voting Application and set of Security Requirements are identified.</b:BIBTEX_Abstract><b:BIBTEX_KeyWords>Applications, Engineering, Object-Oriented, Requirements, Security, Web, and</b:BIBTEX_KeyWords></b:Source><b:Source><b:SourceType>JournalArticle</b:SourceType><b:Tag>noauthororeditor</b:Tag><b:LCID>0</b:LCID><b:Title>Use of Network Forensic Mechanisms to Formulate Network Security</b:Title><b:Year>2015</b:Year><b:Author><b:Author><b:NameList><b:Person><b:Last>Dhammearatchi</b:Last><b:First>Dhishan</b:First></b:Person>testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Sreenivasan</b:Last><b:First>Nikhil</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "testest\n",
+      "</b:NameList></b:Author></b:Author><b:Pages>42</b:Pages><b:Volume>Volume VII</b:Volume><b:StandardNumber> ISSN: 2349-7017 DOI: doi://10.26562/IRJCS.2020.APIS10084</b:StandardNumber><b:JournalName>International Journal of Innovative Research in Information Security</b:JournalName><b:Issue>Issue IV</b:Issue><b:Month>46</b:Month><b:URL>http://www.ijiris.com/volumes/Vol7/iss-4/02.APIS10084.pdf</b:URL><b:BIBTEX_Abstract>The article is all about the Image Processing System that can be defined as, processing and altering an existing image in the desired manner. Image is one of the perceptible sources in applications of Image Processing including a large number of tools and techniques which help to extract complex features of an image. Probably the most powerful image processing system is the human brain together with the eye. The system receives, enhances, and stores images at enormous rates of speed. The objective of Image Processing is to visually enhance or statistically evaluate some aspect of an image not readily apparent in its original form. Several technologies playing on images in real-time but image processing is the real core. This paper discusses the overview of development; implementation of operations required for quality image production and also discusses image processing applications, tools, and techniques.</b:BIBTEX_Abstract><b:BIBTEX_KeyWords>Aspect, Brightness, Color, Digital, Edge, Image, Map, Model, Ratio, Transformation, image, java, processing, security, system</b:BIBTEX_KeyWords></b:Source><b:Source><b:SourceType>JournalArticle</b:SourceType><b:Tag>rakeshdistributed</b:Tag><b:Title>Distributed Scheme to Authenticate Data Storage Security in Cloud Computing</b:Title><b:Year>2017</b:Year><b:Author><b:Author><b:NameList><b:Person><b:Last>Rakesh</b:Last><b:First>B.</b:First></b:Person></b:NameList></b:Autestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Ahmad</b:Last><b:Middle>Kafi Ahmad | Zul Hilmi Abdullah | Siti Nuraini</b:Middle><b:First>Danial</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Person><b:Last>Smith</b:Last><b:First>Matthew</b:First></b:Person></b:NameList></b:Authtestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Shruti</b:Last><b:Middle>C. Umarani | R P</b:Middle><b:First>Dr.</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "<b:Person><b:Last>Huh</b:Last><b:First>Eui-nam</b:First></b:Person></b:NameList></b:Authotestest\n",
+      "testest\n",
+      "testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Pawar</b:Last><b:Middle>Sunil Mandlik | Charulata Rajesh</b:Middle><b:First>Reshma</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Person><b:Last>Krupitzer</b:Last><b:First>Christian</b:First></b:Persotestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Pandey</b:Last><b:Middle>Chhonkar | Garima</b:Middle><b:First>Diksha</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>{Nwabueze</b:Last><b:Middle>A | Usiade}, R. E</b:Middle><b:First>C.</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "testest\n",
+      "<b:Person><b:Last>Borgohain</b:Last><b:Middle>Kumar</b:Middle><b:First>Samir</b:First></b:Person></b:NameList></b:Authotestest\n",
+      "testest\n",
+      "testest\n",
+      "testest\n",
+      "testest\n",
+      "testest\n",
+      "testest\n",
+      "testest\n",
+      "testest\n",
+      "testest\n",
+      "</b:NameList></b:Author></b:Author><b:BookTitle>2021 ACM/SPEC International Conference on Performance Engineering (ICPE)</b:BookTitle><b:ConferenceName>2021 ACM/SPEC International Conference on Performance Engineering (ICPE)</b:ConferenceName><b:Month>April</b:Month><b:BIBTEX_Series>ICPE'21</b:BIBTEX_Series><b:BIBTEX_KeyWords>Benchmark, Energy\\_Efficiency, Group\\_Encyrption\\_Scheme, Security, descartes, sss-group, t_short, myown</b:BIBTEX_KeyWords></b:Source><b:Source><b:SourceType>JournalArticle</b:SourceType><b:Tag>noauthororeditor</b:Tag><b:Title>So Long, And No Thanks for the Externalities: The Rational Rejection of Security Advice by Users</b:Title><b:Year>2016</b:Year><b:Author><b:Author><b:NameList><b:Person><b:Last>Herley</b:Last><b:First>Cormac</b:First></b:Persontestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Pandey</b:Last><b:Middle>Mondal | Praveen Kumar</b:Middle><b:First>Tridib</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Person><b:Last>Sander</b:Last><b:First>Uwe</b:First></b:Persotestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Borah</b:Last><b:First>Upasana</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "<b:Person><b:Last>G.T</b:Last><b:First>Oyerinde</b:First></b:Petestest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Shukhratjanovich</b:Last><b:Middle>Otabek</b:Middle><b:First>Mukhtarov</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "<b:Author><b:NameList><b:Person><b:Last>Bakabe</b:Last><b:Middle>S. Abdullahi | Zaitun Sunusi</b:Middle><b:First>Ahmad</b:First></b:Person></b:NameList></b:Author>testest\n",
+      "testest\n",
+      "testest\n",
+      "<b:Person><b:Last>Smith</b:Last><b:First>Matthew</b:First></b:Person></b:NameList></b:Autestest\n",
+      "<b:Person><b:Last>K</b:Last><b:First>Thanigaivel.</b:First></b:Person></b:NameList></b:Authtestest\n",
+      "testest\n",
+      "testest\n",
+      "<b:Person><b:Last>Krupitzer</b:Last><b:First>Christian</b:First></b:Person></b:NameLitestest\n"
+     ]
+    }
+   ],
    "source": [
     "    for newline in inputfile:\n",
     "        # newline = inputfile.readline()\n",
@@ -47,8 +152,18 @@
     "            ISBN = newline [newline.find(\"<b:StandardNumber>\")+18:newline.rfind(\"</b:StandardNumber>\")]\n",
     "        if newline.find(\"<b:Publisher>\") != -1:\n",
     "            Herausgeber = newline [newline.find(\"<b:Publisher>\")+13:newline.rfind(\"</b:Publisher>\")]\n",
-    "        if printer>=0:\n",
-    "            outputfile.write(\"<Publikation><id>\"+ISBN+\"</id><Autor>\"+Autoren+\"</Autor><Editoren>\"+Editoren+\"</Editoren><Titel>\"+Titel+\"</Titel><Herausgeber>\"+Herausgeber+\"</Herausgeber><Jahr>\"+Jahr+\"</Jahr><Quelle>\"+Quelle+\"</quelle></Publikation>\\n\")"
+    "            \n",
+    "        #Formatierung von Autoren und Editoren    \n",
+    "        for person in range(1,Autoren.count(\"<b:Person>\")): \n",
+    "            if Autoren.find(\"<b:Middle>\") != -1:\n",
+    "                Autor += Autoren [Autoren.find(\"<b:First>\")+9:Autoren.find(\"</b:First>\")]+\" \"+Autoren [Autoren.find(\"<b:Middle>\")+10:Autoren.find(\"</b:Middle>\")]+\" \"+Autoren [Autoren.find(\"<b:Last>\")+8:Autoren.find(\"</b:Last>\")]+\",\"\n",
+    "            else:\n",
+    "                Autor += Autoren [Autoren.find(\"<b:First>\")+9:Autoren.find(\"</b:First>\")]+\" \"+Autoren [Autoren.find(\"<b:Last>\")+8:Autoren.find(\"</b:Last>\")]+\",\"\n",
+    "            Autoren = Autoren [Autoren.find(\"</b:Person>\")+11:-1]\n",
+    "        Autoren = Autor [0:-2] + \"\\n\"\n",
+    "        \n",
+    "        #if printer>=0:\n",
+    "            #outputfile.write(\"<Publikation><id>\"+ISBN+\"</id><Autor>\"+Autoren+\"</Autor><Editoren>\"+Editoren+\"</Editoren><Titel>\"+Titel+\"</Titel><Herausgeber>\"+Herausgeber+\"</Herausgeber><Jahr>\"+Jahr+\"</Jahr><Quelle>\"+Quelle+\"</quelle></Publikation>\\n\")"
    ]
   },
   {
