--- a/Modul_2/2_2_JSON.ipynb
+++ b/Modul_2/2_2_JSON.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,17 @@
     "outputfile=open('./bibsonomy_to_solr.json','w')\n",
     "outputfile.write(\"[\\n\")\n",
     "outputfile.close()\n",
-    "outputfile=open('./bibsonomy_to_solr.json','a')"
+    "outputfile=open('./bibsonomy_to_solr.json','a')\n",
+    "Zaehler=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for newline in inputfile:\n",
+    "    for newline in inputfile:\n",
     "        # newline = inputfile.readline()\n",
     "        #print(newline)\n",
     "        printer=0\n",
@@ -30,37 +31,74 @@
     "        Editoren=\"\"\n",
     "        ISBN=\"\"\n",
     "        Herausgeber=\"\"\n",
-    "        if newline.find(\"<b:Year>\") != -1:\n",
+    "        Autor = \"\"\n",
+    "        Editor = \"\"\n",
+    "        Zaehler = Zaehler+1\n",
+    "        Publikation = newline [newline.find(\"<b:Source>\")+10:newline.find(\"</b:Source>\")] \n",
+    "        \n",
+    "        Publikation = Publikation.replace('\"','')\n",
+    "        if Publikation.find(\"<b:Year>\") != -1:\n",
     "            printer+=1\n",
-    "            Jahr = newline [newline.find(\"<b:Year>\")+8:newline.rfind(\"</b:Year>\")]\n",
-    "        if newline.find(\"<b:SourceType>\") != -1:\n",
+    "            Jahr = Publikation [Publikation.find(\"<b:Year>\")+8:Publikation.rfind(\"</b:Year>\")]\n",
+    "        if Publikation.find(\"<b:SourceType>\") != -1:\n",
     "            printer+=1\n",
-    "            Quelle = newline [newline.find(\"<b:SourceType>\")+14:newline.rfind(\"</b:SourceType>\")]\n",
-    "        if newline.find(\"<b:Title>\") != -1:\n",
+    "            Quelle = Publikation [Publikation.find(\"<b:SourceType>\")+14:Publikation.rfind(\"</b:SourceType>\")]\n",
+    "        if Publikation.find(\"<b:Title>\") != -1:\n",
     "            printer+=1\n",
-    "            Titel = newline [newline.find(\"<b:Title>\")+9:newline.rfind(\"</b:Title>\")]\n",
-    "        if newline.find(\"<b:Author>\") != -1:\n",
-    "            Autoren = newline [newline.find(\"<b:Author>\")+10:newline.rfind(\"</b:Author>\")]\n",
-    "        if newline.find(\"<b:Editor>\") != -1:\n",
-    "            Editoren = newline [newline.find(\"<b:Editor>\")+10:newline.rfind(\"</b:Editor>\")]\n",
+    "            Titel = Publikation [Publikation.find(\"<b:Title>\")+9:Publikation.rfind(\"</b:Title>\")]\n",
+    "        if Publikation.find(\"<b:Author>\") != -1:\n",
+    "            printer+=1\n",
+    "            Autoren = Publikation [Publikation.find(\"<b:Author>\")+10:Publikation.rfind(\"</b:Author>\")]\n",
+    "        if Publikation.find(\"<b:Editor>\") != -1:\n",
+    "            printer+=1\n",
+    "            Editoren = Publikation [Publikation.find(\"<b:Editor>\")+10:Publikation.rfind(\"</b:Editor>\")]\n",
     "        if newline.find(\"<b:StandardNumber>\") != -1:\n",
-    "            ISBN = newline [newline.find(\"<b:StandardNumber>\")+18:newline.rfind(\"</b:StandardNumber>\")]\n",
+    "            printer+=1\n",
+    "            ISBN = Publikation [Publikation.find(\"<b:StandardNumber>\")+18:Publikation.rfind(\"</b:StandardNumber>\")]\n",
     "        if newline.find(\"<b:Publisher>\") != -1:\n",
-    "            Herausgeber = newline [newline.find(\"<b:Publisher>\")+13:newline.rfind(\"</b:Publisher>\")]\n",
-    "        if printer>=0:\n",
-    "            outputfile.write(\"{\\n\"'\"id\" : \"'+ISBN+'\",\\n''\"author\" : \"'+Autoren+'\",\\n''\"editors\" : \"'+Editoren+'\",\\n''\"title\" : \"'+Titel+'\",\\n''\"publisher\" : \"'+Herausgeber+'\",\\n''\"year\" : '+Jahr+'\",\\n''\"type\" : \"'+Quelle+'\",\\n'\"}\\n\")"
+    "            printer+=1\n",
+    "            Herausgeber = Publikation [Publikation.find(\"<b:Publisher>\")+13:Publikation.rfind(\"</b:Publisher>\")]\n",
+    "            \n",
+    "        #Formatierung von Autoren und Editoren   \n",
+    "        for person in range(0,Autoren.count(\"<b:Person>\")): \n",
+    "            if Autoren.find(\"<b:Middle>\") != -1:\n",
+    "                Autor += Autoren[Autoren.find(\"<b:First>\")+9:Autoren.find(\"</b:First>\")]+\" \"+Autoren[Autoren.find(\"<b:Middle>\")+10:Autoren.find(\"</b:Middle>\")]+\" \"+Autoren[Autoren.find(\"<b:Last>\")+8:Autoren.find(\"</b:Last>\")]+\",\"\n",
+    "            else:\n",
+    "                Autor += Autoren[Autoren.find(\"<b:First>\")+9:Autoren.find(\"</b:First>\")]+\" \"+Autoren[Autoren.find(\"<b:Last>\")+8:Autoren.find(\"</b:Last>\")]+\",\"\n",
+    "            Autoren = Autoren[Autoren.find(\"</b:Person>\")+11:-1]\n",
+    "        Autoren = Autor[0:-2]+\"\\n\"\n",
+    "        for person in range(0,Editoren.count(\"<b:Person>\")): \n",
+    "            if Editoren.find(\"<b:Middle>\") != -1:\n",
+    "                Editor += Editoren[Editoren.find(\"<b:First>\")+9:Editoren.find(\"</b:First>\")]+\" \"+Editoren[Editoren.find(\"<b:Middle>\")+10:Editoren.find(\"</b:Middle>\")]+\" \"+Editoren[Editoren.find(\"<b:Last>\")+8:Editoren.find(\"</b:Last>\")]+\",\"                \n",
+    "            else:\n",
+    "                Editor += Editoren[Editoren.find(\"<b:First>\")+9:Editoren.find(\"</b:First>\")]+\" \"+Editoren[Editoren.find(\"<b:Last>\")+8:Editoren.find(\"</b:Last>\")]+\",\"\n",
+    "            Editoren = Editoren[Editoren.find(\"</b:Person>\")+11:-1]  \n",
+    "                 \n",
+    "        Autoren = Autor[0:-2]\n",
+    "        Editoren = Editor[0:-2]\n",
+    "        if (printer>=3 and Zaehler<AnzahlBuch):\n",
+    "            outputfile.write(\"{\\n\"'\"id\" : \"'+ISBN+'\",\\n''\"author\" : \"'+Autoren+'\",\\n''\"editors\" : \"'+Editoren+'\",\\n''\"title\" : \"'+Titel+'\",\\n''\"publisher\" : \"'+Herausgeber+'\",\\n''\"year\" : \"'+Jahr+'\",\\n''\"type\" : \"'+Quelle+'\"\\n'\"},\\n\")\n",
+    "        elif Zaehler==AnzahlBuch:\n",
+    "            outputfile.write(\"{\\n\"'\"id\" : \"'+ISBN+'\",\\n''\"author\" : \"'+Autoren+'\",\\n''\"editors\" : \"'+Editoren+'\",\\n''\"title\" : \"'+Titel+'\",\\n''\"publisher\" : \"'+Herausgeber+'\",\\n''\"year\" : \"'+Jahr+'\",\\n''\"type\" : \"'+Quelle+'\"\\n'\"}\\n\")    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputfile.write(\"</Publikationen>\")\n",
+    "outputfile.write(\"]\")\n",
     "outputfile.close()        \n",
     "inputfile.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
